/*
 * Copyright 2017-present Open Networking Foundation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
option java_package = "org.onosproject.grpc.net.device.models";


import "net/DeviceProto.proto";
import "net/device/DeviceEnumsProto.proto";
import "net/PortProto.proto";

package net.device;

// Corresponds to org.onosproject.net.device.DeviceEvent.
message DeviceNotificationProto {
    net.DeviceProto device = 1;
    net.device.DeviceEventTypeProto device_event_type = 2;
    net.PortProto port = 3;
}